fix spacing

--- a/public/css/randommode.css
+++ b/public/css/randommode.css
@@ -10,7 +10,6 @@
     padding-left: 10%;
     padding-right: 10%;
     padding-bottom: 10px;
-	margin-top: 30px;
 }
 
 .view-cards-title {
